# dev-skillbox-module32

Task_1/: CMakeLists.txt  Task_1.cpp
Task_2/: CMakeLists.txt  Task_2.cpp
Task_3/: Task_3.pb.cc  Task_3.pb.h  Task_3.proto
